--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,10 +1,15 @@
-.main-button{
-   width: 300px;
-   padding: 20px 30px;
-   background-color: #1d2a55;
-   font-size: 28px;
-   color: aliceblue;
-   border: none;
-   border-radius: 4px;
-   cursor: pointer;
+
+
+.main-button {
+  width: 470px;
+  padding: 20px 54px;
+  background-color: #1F27F5;
+  font-family: Lato, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
