--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   display: flex;
   flex-direction: column;
-  flex:1;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
-.cards-container{
-   display: flex;
-   flex-wrap: wrap;
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
 }
-
