--- a/src/components/LoginForm/styles.css
+++ b/src/components/LoginForm/styles.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 .login-form-wrapper {
   display: flex;
   flex-direction: column;
