--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,7 +1,7 @@
 
 
 .main-button {
-  width: 470px;
+  width: 100%;
   padding: 20px 54px;
   background-color: #1F27F5;
   font-family: Lato, "Helvetica Neue", Helvetica, sans-serif;
