--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -8,10 +8,11 @@
 .input-wrapper{
   display: flex;
   flex-direction: column;
-  width: 470px;
+  width: 100%;
   gap: 4px;
 }
 .input-wrapper input{
+  width: 100%;
   padding: 12px;
   border: 1px solid #000;
   border-radius: 4px;
